fix navbar overlapping header

--- a/src/assets/sass/modules/_mq.scss
+++ b/src/assets/sass/modules/_mq.scss
@@ -37,7 +37,8 @@ $mq-breakpoints: (
     tablet:  740px,
     desktop: 980px,
     wide:    1300px,
-    xlwide:  1500px
+    // xlwide:  1500px
+    xlwide:  1850px
 ) !default;
 
 /// Static breakpoint (for fixed-width layouts)
